--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 	
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.79.2" />
   </ItemGroup>
 
