added demo pages and made the category page look better. I added universal css to map everything together, I isolated the business logic and implemented dependency inversion. added new mappers and made a different model for the ui.

--- a/OkaneFlow/OkaneFlow.csproj
+++ b/OkaneFlow/OkaneFlow.csproj
@@ -32,15 +32,15 @@
 
   <ItemGroup>
 	<Folder Include="Helpers\Enums\" />
-    <Folder Include="Pages\Dashboard\Debt\" />
-    <Folder Include="Pages\Dashboard\Subscription\" />
     <Folder Include="Pages\People\Chats\" />
     <Folder Include="Pages\People\OtherDashboard\" />
     <Folder Include="Pages\People\Permissions\" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
+
   </ItemGroup>
 
 </Project>
