--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -12,5 +12,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
+	
 
+
+    <ItemGroup>
+	    <ProjectReference Include="..\Service\Service.csproj" />
+    </ItemGroup>
 </Project>
